<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarClaseActivity">

    <EditText
        android:id="@+id/txtCodigoClase"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCodigo"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvNombreClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_clase"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/txtNombreClase"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombreClase"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/txvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreClase"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/txtSeccion"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvSeccion"
        app:layout_constraintVertical_bias="0.094"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvSeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seccion"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigoClase"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/txtEdificio"
        android:layout_width="82dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvEdificio"
        app:layout_constraintVertical_bias="0.203"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvHora"
        app:layout_constraintVertical_bias="0.064"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvEdificio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edificio_piso"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeccion"
        app:layout_constraintVertical_bias="0.149" />

    <EditText
        android:id="@+id/txtAula"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAula"
        app:layout_constraintVertical_bias="0.22"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvAula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aula"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHora"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/btnGuardarCLase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>